# flax

./: .gitignore  .travis-old.yml  .travis.yml  HACKS.md  Jamfile.jam  Jamroot.jam  LICENSE  LanguageReference.md  Makefile  README.md  appveyor.yml  build.capri  buildgl.fish  buildprog.fish  buildprog.sh  changelog.md  flax.sln  flax.vcxproj  flax.vcxproj.filters  hqgit push  index.html  issues.md  llvm-5.0.0-patch.diff  makefile  meson.build  notes.md  output.txt  repro_1  roadmap.md  shakefile.hs  test  test.cpp  test.lli  test.lscvm  test2.bc  test2.s  travis.sh  ugh.patch
.github/workflows/: continuous_integration.yml
.semaphore/: semaphore.yml
docs/: LanguageReference.md  flax_grammar.g4
lib/Foundation/: build.capri
lib/Foundation/source/: Foundation.crs  PrintFuncs.crs
libs/: Array.flx  Assert.flx  Core.flx  Empty.flx  FileIO.flx  Format.flx  Foundation.flx  Functional.flx  Integer.flx  IntegerLimits.flx  LibCInterface.flx  Math.flx  Protocols.flx  String.flx  Unicode.flx  libc.flx  limits.flx  math.flx  os.flx  stdio.flx
libs/Crypto/: MD5.flx
libs/Math/: Vector.flx  Vector2.flx  Vector3.flx
libs/OS/: IOInterface.flx
libs/OpenGL/: GL.flx  GLUT.flx
libs/SDL2/: Keyboard.flx  SDL.flx
libs/std/: file.flx  io.flx  limits.flx  map.flx  math.flx  opt.flx  print.flx  set.flx
misc/flax.tmbundle/Preferences/: Comments.tmPreferences  Folding.tmPreferences
misc/flax.tmbundle/Syntaxes/: flax.tmLanguage
programs/fic/: main.flx  run.bat
scripts/: test.crs
scripts/corec.dSYM/Contents/: Info.plist
source/: Compiler.cpp  Destructors.cpp  Errors.cpp  Profiling.cpp  main.cpp  stacktrace.cpp
source/Backend/: Backend.cpp  LLVMBackend.cpp  x64AsmBackend.cpp
source/Backend/llvm/: CompileAndLink.cpp  Translator.cpp
source/Codegen/: AggrTypeCodegen.cpp  Alloc.cpp  AllocCodegen.cpp  ArrayCodegen.cpp  ArrayDecomposition.cpp  Arrays.cpp  AstImpl.cpp  BinaryOpCodegen.cpp  BinaryOps.cpp  Blocks.cpp  BuiltinTypeCodegen.cpp  CodegenUtils.cpp  ComputedPropertyCodegen.cpp  ControlFlowCodegen.cpp  Destructuring.cpp  EnumerationCodegen.cpp  Errors.cpp  ExprCodegen.cpp  ExtensionCodegen.cpp  ForLoop.cpp  FuncCallCodegen.cpp  FuncCodegen.cpp  FuncDeclCodegen.cpp  IfCodegen.cpp  IfElseStatements.cpp  LiteralCodegen.cpp  Literals.cpp  LlvmCodeGen.cpp  LoopCodegen.cpp  Loops.cpp  MemberAccessCodegen.cpp  MiscCodegen.cpp  NamespaceCodegen.cpp  Operators.cpp  Range.cpp  RootCodegen.cpp  RuntimeFunctions.cpp  StructCodegen.cpp  TopLevel.cpp  TopLevelCodegen.cpp  (+10 more)
source/Codegen/Functions/: FuncCallCodegen.cpp  (+7 more)
source/FlaxIR/: ArrayType.cpp  ConstantValue.cpp  ExecutionTarget.cpp  Function.cpp  FunctionType.cpp  GlobalValue.cpp  IRBlock.cpp  IRBuilder.cpp  Identifier.cpp  Instruction.cpp  Module.cpp  PointerType.cpp  PrimitiveType.cpp  StructType.cpp  Translator.cpp  Type.cpp  Value.cpp
source/Frontend/: CmdLineArgs.cpp  Compiler.cpp  Errors.cpp  FileReader.cpp  LlvmCompiler.cpp  main.cpp
source/Parser/: Lexer.cpp  Parser.cpp  Tokeniser.cpp
source/SemanticAnalysis/: Dependencies.cpp  ParserTypeAnalysis.cpp  RewriteDotOperators.cpp  VarChecker.cpp
source/TypeChecking/: FlaxType.cpp
source/TypeInfo/: TypeInfo.cpp  TypeInfoGeneration.cpp
source/Utf8Rewind/: utf8rewind.cpp
source/backend/: backend.cpp  x64AsmBackend.cpp
source/codegen/: alloc.cpp  arithmetic.cpp  assign.cpp  autocasting.cpp  builtin.cpp  call.cpp  casting.cpp  classes.cpp  codegenstate.cpp  constructor.cpp  controlflow.cpp  destructure.cpp  directives.cpp  dotop.cpp  dotops.cpp  enums.cpp  function.cpp  literal.cpp  literals.cpp  logical.cpp  loops.cpp  misc.cpp  operators.cpp  raii.cpp  ranges.cpp  refcounting.cpp  sizeof.cpp  slice.cpp  structs.cpp  subscript.cpp  toplevel.cpp  traits.cpp  type.cpp  unions.cpp  variable.cpp
source/fir/: ConstantValue.cpp  ExecutionTarget.cpp  Function.cpp  GlobalValue.cpp  IRBlock.cpp  IRBuilder.cpp  Identifier.cpp  Instruction.cpp  Module.cpp  Name.cpp  Value.cpp
source/frontend/: arguments.cpp  collector.cpp  compiler.cpp  dependencies.cpp  errors.cpp  file.cpp  frontend.cpp  import.cpp  lexer.cpp  parser.cpp  platform.cpp  pts.cpp
source/include/: allocator.h  ast.h  backend.h  classbase.h  codegen.h  compiler.h  container.h  cst.h  defs.h  dependency.h  errors.h  frontend.h  gluecode.h  iceassert.h  lexer.h  llvm_all.h  memorypool.h  mpool.h  operators.h  parser.h  parser_internal.h  platform.h  polymorph.h  polymorph_internal.h  precompile.cpp  precompile.h  profile.h  profiling.h  pts.h  repl.h  resolver.h  runtimefuncs.h  semantic.h  sst.h  sst_expr.h  stacktrace.h  stcommon.h  string_consts.h  tcn.h  typecheck.h  (+8 more)
source/misc/: allocator.cpp  destructors.cpp  identifier.cpp  mpool.cpp
source/platform/: backtrace.cpp  compiler.cpp  msvcfinder.cpp  platform.cpp
source/repl/: commands.cpp  driver.cpp  execute.cpp  history.cpp  parse.cpp
source/tinyprocesslib/: process.cpp  process.h  process_unix.inc  process_win.inc
source/typecheck/: alloc.cpp  arithmetic.cpp  assign.cpp  call.cpp  classes.cpp  controlflow.cpp  defer.cpp  destructure.cpp  directives.cpp  dotop.cpp  enums.cpp  function.cpp  genericinference-old.cpp  genericinference.cpp  generics.cpp  literals.cpp  loops.cpp  misc.cpp  operators.cpp  ranges.cpp  sizeof.cpp  slice.cpp  special.cpp  structs.cpp  subscript.cpp  toplevel.cpp  traits.cpp  type.cpp  typecheckstate.cpp  unions.cpp  using.cpp  variable.cpp  whole.cpp
source_old/: Destructors.cpp
source_old/Backend/: x64AsmBackend.cpp
source_old/Codegen/: ArrayDecomposition.cpp  Blocks.cpp  CodegenUtils.cpp  IfElseStatements.cpp
source_old/FlaxIR/: GlobalValue.cpp  Identifier.cpp
source_old/Frontend/: Compiler.cpp
source_old/SemanticAnalysis/: VarChecker.cpp
source_old/include/: ast.h  backend.h  classbase.h  cst.h  operators.h  parser.h  runtimefuncs.h  typeinfo.h  util.h
source_old/tinyprocesslib/: process.cpp
web/: FlaxSyntax.html  README.txt  index.html
web/css/: prism.css  style-desktop.css  style.css
web/js/: highlight.pack.js  init.js  prism.js  showdown.github.min.js  showdown.min.js  showdown.prettify.min.js
(+181 files in other folders)
